--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -11,29 +11,30 @@
 .projects .projectTitle {
   text-align: center;
   color: #3e497a;
-  font-size: 3rem;
+  font-size: 2rem; /* Adjust font size for smaller screens */
   font-weight: bold;
-  margin-bottom: 40px;
+  margin-top: 5%;
+  margin-bottom: 5%; /* Adjust margin for smaller screens */
 }
 
 .projectList {
   width: 90%;
   max-width: 1200px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2 columns */
-  gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(35%, 1fr)); /* Use auto-fit for responsiveness */
+  gap: 20px; /* Adjust gap for smaller screens */
 }
 
 .projectItem {
   border-radius: 15px;
   background-color: white;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  padding: 30px;
+  padding: 20px; /* Adjust padding for smaller screens */
   text-align: center;
   /* Make project items the same height */
   display: flex; /* Use flexbox to achieve equal height */
   flex-direction: column;
-  height: 450px;
+  height: 400px; /* Adjust height for smaller screens */
 }
 
 .projectItem:hover {
@@ -46,21 +47,21 @@
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
-  height: 250px;
+  height: 200px; /* Adjust height for smaller screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 20px;
+  margin-bottom: 15px; /* Adjust margin for smaller screens */
   flex-shrink: 0; /* Prevent image from shrinking */
 }
 
 .projectItem h1 {
-  font-size: 1.8rem;
-  margin-bottom: 15px;
+  font-size: 1.5rem; /* Adjust font size for smaller screens */
+  margin-bottom: 10px; /* Adjust margin for smaller screens */
 }
 
 .project-description {
-  font-size: 1rem;
+  font-size: 0.9rem; /* Adjust font size for smaller screens */
   color: #555;
   line-height: 1.5;
   flex-grow: 1; /* Allow description to take up remaining space */
@@ -69,12 +70,14 @@
 /* Media Queries for Responsiveness */
 @media only screen and (max-width: 800px) {
   .projectList {
-    width: 100%;
     grid-template-columns: 1fr; /* Single column for smaller screens */
-    gap: 20px;
   }
 
   .projectItem {
     width: 100%;
+  }
+
+  .projectTitle {
+    font-size: 1.8rem; /* Further adjustment for very small screens */
   }
 }
