--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,7 +7,7 @@
   
   .about {
     width: 100%;
-    height: calc(100vh - 100px);
+    height: 55%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,6 +15,7 @@
     text-align: center;
     background-color : whitesmoke;
     color: #3e497a;
+    margin-bottom: 3%;
   }
   
   .about h2 {
@@ -42,7 +43,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    
+    border-top: 1px solid lightgray;
   }
   
   .skills h1 {
@@ -71,7 +72,8 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    
+    box-shadow: lightgray 0px 5px 15px;
+
   }
   
   .skill-category h3 {
