--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -17,6 +17,12 @@
     color: #3e497a;
     margin-bottom: 3%;
   }
+
+  @media only screen and (max-width: 600px) {
+    .about {
+      height: 70%;
+    }
+  }
   
   .about h2 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
